--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,7 +128,6 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -620,22 +619,84 @@ StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.Actor=True
+EnemyAI_C.Character=True
+EnemyAI_C.Tick=True
+EnemyAI_C.Camera=True
+EnemyAI_C.Pawn=True
+EnemyAI_C.Replication=True
+EnemyAI_C.Rendering=True
+EnemyAI_C.Collision=True
+EnemyAI_C.Actor=True
+EnemyAI_C.Input=True
+EnemyAI_C.TransformCommon=True
+EnemyAI_C.Animation=True
+EnemyAI_C.Mesh=True
+EnemyAI_C.Clothing=True
+EnemyAI_C.Physics=True
+EnemyAI_C.MasterPoseComponent=True
+EnemyAI_C.Lighting=True
+EnemyAI_C.ClothingSimulation=True
+EnemyAI_C.SkinWeights=True
+EnemyAI_C.Navigation=True
+EnemyAI_C.VirtualTexture=True
+EnemyAI_C.Tags=True
+EnemyAI_C.Activation=True
+EnemyAI_C.Cooking=True
+EnemyAI_C.Character Movement (General Settings)=True
+EnemyAI_C.Character Movement: Walking=True
+EnemyAI_C.Character Movement: Jumping / Falling=True
+EnemyAI_C.Character Movement (Networking)=True
+EnemyAI_C.Character Movement: Swimming=True
+EnemyAI_C.Character Movement: Flying=True
+EnemyAI_C.Character Movement: Custom Movement=True
+EnemyAI_C.Character Movement (Rotation Settings)=True
+EnemyAI_C.Character Movement: Physics Interaction=True
+EnemyAI_C.Character Movement=True
+EnemyAI_C.Character Movement: Avoidance=True
+EnemyAI_C.RootMotion=True
+EnemyAI_C.Character Movement: NavMesh Movement=True
+EnemyAI_C.NavMovement=True
+EnemyAI_C.Velocity=True
+EnemyAI_C.PlanarMovement=True
+EnemyAI_C.MovementComponent=True
+EnemyAI_C.Shape=True
+EnemyAI_C.Materials=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile
+OpenAssetsAtExit=/Game/NPC/EnemyAI.EnemyAI
+OpenAssetsAtExit=/Game/NPC/Mat_Map1.Mat_Map1
 
 [PathColor]
 /Game/FirstPersonBP=(R=0.079929,G=0.363069,B=0.500000,A=1.000000)
 /Game/FirstPersonBP/Blueprints=(R=0.079929,G=0.363069,B=0.500000,A=1.000000)
 /Game/UI=(R=0.500000,G=0.117196,B=0.475078,A=1.000000)
+/Game/NPC=(R=0.500000,G=0.050688,B=0.030787,A=1.000000)
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
-MRUItem1=/Game/FirstPersonBP/Maps/Materials/Mat_Map
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem3=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
-MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
-MRUItem5=/Game/UI/HUD
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/NPC/Mat_Map1
+MRUItem3=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3
+MRUItem4=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2
+MRUItem5=/Game/NPC/EnemyAI
+MRUItem6=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
+MRUItem7=/Game/FirstPersonBP/Maps/Materials/Mat_Map
+MRUItem8=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
+MRUItem9=/Game/UI/HUD
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -697,6 +758,8 @@ FrameNumberDisplayFormat=Seconds
 [AssetEditorToolkitTabLocation]
 /Game/UI/HUD.HUD=0
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
+/Game/FirstPersonBP/Maps/Materials/Mat_Map.Mat_Map=0
+/Game/FirstPersonBP/Maps/Materials/Mat_Map1.Mat_Map1=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -705,10 +768,20 @@ bHideUnrelatedNodes=False
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object=
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3.Mat_Map1_3;
+RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2.Mat_Map1_2;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1.Mat_Map1;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map.Mat_Map;
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/NPC/EnemyAI.EnemyAI;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -723,8 +796,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Grime.M_Concrete_Grime;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1624,4 +1695,7 @@ SequencerWidgets.TimeStamp=2020.10.12-11.19.22
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2020.10.12-11.19.17
 ExternalImagePicker.LastCompileMethod=Unknown
+
+[DetailCategoriesAdvanced]
+FirstPersonProjectile_C.Collision=False
 
