--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -673,10 +673,45 @@ SpotLight.RayTracing=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+EnemyAI_C.Default=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+RecastNavMesh.TransformCommon=True
+Actor.TransformCommon=True
+Actor.Replication=True
+Actor.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile
 OpenAssetsAtExit=/Game/NPC/EnemyAI.EnemyAI
 OpenAssetsAtExit=/Game/NPC/Mat_Map1.Mat_Map1
 
@@ -760,42 +795,44 @@ FrameNumberDisplayFormat=Seconds
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
 /Game/FirstPersonBP/Maps/Materials/Mat_Map.Mat_Map=0
 /Game/FirstPersonBP/Maps/Materials/Mat_Map1.Mat_Map1=0
+/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
-Brush=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 Object=
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/NPC/EnemyAI.EnemyAI;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Fire_Tiled_D.T_Fire_Tiled_D;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3.Mat_Map1_3;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2.Mat_Map1_2;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1.Mat_Map1;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map.Mat_Map;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/NPC/EnemyAI.EnemyAI;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
