--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,6 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -709,11 +710,58 @@ PawnSensingComponent.Tags=True
 PawnSensingComponent.ComponentReplication=True
 PawnSensingComponent.Cooking=True
 PawnSensingComponent.Events=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.MasterPoseComponent=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.SkinWeights=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.VirtualTexture=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+Actor.Collision=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 OpenAssetsAtExit=/Game/NPC/EnemyAI.EnemyAI
-OpenAssetsAtExit=/Game/NPC/Mat_Map1.Mat_Map1
 
 [PathColor]
 /Game/FirstPersonBP=(R=0.079929,G=0.363069,B=0.500000,A=1.000000)
@@ -722,16 +770,17 @@ OpenAssetsAtExit=/Game/NPC/Mat_Map1.Mat_Map1
 /Game/NPC=(R=0.500000,G=0.050688,B=0.030787,A=1.000000)
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/NPC/Mat_Map1
-MRUItem3=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3
-MRUItem4=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2
-MRUItem5=/Game/NPC/EnemyAI
-MRUItem6=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
-MRUItem7=/Game/FirstPersonBP/Maps/Materials/Mat_Map
-MRUItem8=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
-MRUItem9=/Game/UI/HUD
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
+MRUItem2=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4
+MRUItem3=/Game/NPC/Mat_Map1
+MRUItem4=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3
+MRUItem5=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2
+MRUItem6=/Game/NPC/EnemyAI
+MRUItem7=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
+MRUItem8=/Game/FirstPersonBP/Maps/Materials/Mat_Map
+MRUItem9=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
+MRUItem10=/Game/UI/HUD
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -796,6 +845,9 @@ FrameNumberDisplayFormat=Seconds
 /Game/FirstPersonBP/Maps/Materials/Mat_Map.Mat_Map=0
 /Game/FirstPersonBP/Maps/Materials/Mat_Map1.Mat_Map1=0
 /Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=0
+/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2.Mat_Map1_2=0
+/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3.Mat_Map1_3=0
+/Game/NPC/Mat_Map1.Mat_Map1=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -813,6 +865,8 @@ Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4.Mat_Map1_4;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/NPC/EnemyAI.EnemyAI;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
@@ -822,7 +876,6 @@ RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2.Mat_Map1_2;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1.Mat_Map1;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map.Mat_Map;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -832,7 +885,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1735,4 +1787,5 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [DetailCategoriesAdvanced]
 FirstPersonProjectile_C.Collision=False
+StaticMeshActor.Materials=True
 
