Add new enemies
Add new enemies

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,7 +128,6 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -151,7 +150,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps/Materials
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -756,12 +755,40 @@ FirstPersonCharacter_C.PlanarMovement=True
 FirstPersonCharacter_C.MovementComponent=True
 FirstPersonCharacter_C.Shape=True
 Actor.Collision=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Events=True
+Actor.Rendering=True
+PointB_C.Tick=True
+PointB_C.Replication=True
+PointB_C.Rendering=True
+PointB_C.Collision=True
+PointB_C.Actor=True
+PointB_C.Input=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Events=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
+PointB_C.TransformCommon=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 OpenAssetsAtExit=/Game/NPC/EnemyAI.EnemyAI
+OpenAssetsAtExit=/Game/UI/PointB.PointB
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile
+OpenAssetsAtExit=/Game/UI/HUD.HUD
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [PathColor]
 /Game/FirstPersonBP=(R=0.079929,G=0.363069,B=0.500000,A=1.000000)
@@ -770,17 +797,18 @@ OpenAssetsAtExit=/Game/NPC/EnemyAI.EnemyAI
 /Game/NPC=(R=0.500000,G=0.050688,B=0.030787,A=1.000000)
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/UI/HUD
 MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
-MRUItem3=/Game/NPC/Mat_Map1
-MRUItem4=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3
-MRUItem5=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2
-MRUItem6=/Game/NPC/EnemyAI
-MRUItem7=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
-MRUItem8=/Game/FirstPersonBP/Maps/Materials/Mat_Map
-MRUItem9=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
-MRUItem10=/Game/UI/HUD
+MRUItem3=/Game/UI/PointB
+MRUItem4=/Game/NPC/EnemyAI
+MRUItem5=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4
+MRUItem6=/Game/NPC/Mat_Map1
+MRUItem7=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3
+MRUItem8=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2
+MRUItem9=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
+MRUItem10=/Game/FirstPersonBP/Maps/Materials/Mat_Map
+MRUItem11=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -863,10 +891,14 @@ SceneComponent=
 ActorComponent=
 Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshComponent=
+MeshComponent=
 
 [PlacementMode]
-RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4.Mat_Map1_4;
+RecentlyPlaced=/Game/UI/PointB.PointB;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4.Mat_Map1_4;
 RecentlyPlaced=/Game/NPC/EnemyAI.EnemyAI;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
@@ -883,8 +915,6 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -952,7 +982,7 @@ bMaterialQualityUsed[2]=0
 [RootWindow]
 ScreenPosition=X=1080.000 Y=380.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
