--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -895,13 +895,16 @@ StaticMeshComponent=
 MeshComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
 RecentlyPlaced=/Game/UI/PointB.PointB;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4.Mat_Map1_4;
 RecentlyPlaced=/Game/NPC/EnemyAI.EnemyAI;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Fire_Tiled_D.T_Fire_Tiled_D;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3.Mat_Map1_3;
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2.Mat_Map1_2;
@@ -912,9 +915,6 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
