--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -787,7 +787,6 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/NPC/EnemyAI.EnemyAI
 OpenAssetsAtExit=/Game/UI/PointB.PointB
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile
-OpenAssetsAtExit=/Game/UI/HUD.HUD
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [PathColor]
@@ -895,12 +894,13 @@ StaticMeshComponent=
 MeshComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Game/NPC/Mat_Map1.Mat_Map1;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
 RecentlyPlaced=/Game/UI/PointB.PointB;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4.Mat_Map1_4;
 RecentlyPlaced=/Game/NPC/EnemyAI.EnemyAI;
@@ -914,7 +914,6 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
