--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -781,12 +781,33 @@ PointB_C.TransformCommon=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+StaticMeshActor.MaterialParameters=False
+StaticMeshActor.HLOD=False
+StaticMeshActor.Mobile=False
+StaticMeshActor.AssetUserData=False
+GeneralFloor_C.Tick=True
+GeneralFloor_C.Replication=True
+GeneralFloor_C.Rendering=True
+GeneralFloor_C.Collision=True
+GeneralFloor_C.Actor=True
+GeneralFloor_C.Input=True
+GeneralFloor_C.TransformCommon=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/NPC/EnemyAI.EnemyAI
-OpenAssetsAtExit=/Game/UI/PointB.PointB
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [PathColor]
@@ -797,17 +818,20 @@ OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPerson
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/UI/HUD
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
-MRUItem3=/Game/UI/PointB
-MRUItem4=/Game/NPC/EnemyAI
-MRUItem5=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4
-MRUItem6=/Game/NPC/Mat_Map1
-MRUItem7=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3
-MRUItem8=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2
-MRUItem9=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
-MRUItem10=/Game/FirstPersonBP/Maps/Materials/Mat_Map
-MRUItem11=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
+MRUItem1=/Game/FirstPersonBP/Maps/GeneralFloor
+MRUItem2=/Game/UI/PointB
+MRUItem3=/Game/UI/Death
+MRUItem4=/Game/UI/HUD
+MRUItem5=/Game/UI/EndGame
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
+MRUItem7=/Game/NPC/EnemyAI
+MRUItem8=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_4
+MRUItem9=/Game/NPC/Mat_Map1
+MRUItem10=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_3
+MRUItem11=/Game/FirstPersonBP/Maps/Materials/Mat_Map1_2
+MRUItem12=/Game/FirstPersonBP/Maps/Materials/Mat_Map1
+MRUItem13=/Game/FirstPersonBP/Maps/Materials/Mat_Map
+MRUItem14=/Game/FirstPersonBP/Blueprints/Material/bullet_mat
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -875,6 +899,10 @@ FrameNumberDisplayFormat=Seconds
 /Game/FirstPersonBP/Maps/Materials/Mat_Map1_2.Mat_Map1_2=0
 /Game/FirstPersonBP/Maps/Materials/Mat_Map1_3.Mat_Map1_3=0
 /Game/NPC/Mat_Map1.Mat_Map1=0
+/Game/NPC/EnemyAI.EnemyAI=0
+/Game/UI/PointB.PointB=0
+/Game/UI/EndGame.EndGame=0
+/Game/FirstPersonBP/Maps/GeneralFloor.GeneralFloor=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -885,15 +913,21 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshActor=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Maps/GeneralFloor.GeneralFloor;
 RecentlyPlaced=/Game/NPC/Mat_Map1.Mat_Map1;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -913,7 +947,6 @@ RecentlyPlaced=/Game/FirstPersonBP/Maps/Materials/Mat_Map.Mat_Map;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1817,4 +1850,5 @@ ExternalImagePicker.LastCompileMethod=Unknown
 [DetailCategoriesAdvanced]
 FirstPersonProjectile_C.Collision=False
 StaticMeshActor.Materials=True
+PropertyWrapper.Variable=False
 
