--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps/Materials
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -807,7 +807,7 @@ K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [PathColor]
@@ -1012,9 +1012,9 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [RootWindow]
-ScreenPosition=X=1080.000 Y=380.000
-WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+ScreenPosition=X=882.000 Y=380.000
+WindowSize=X=1478.000 Y=864.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
